fix alignment of canvas and background image on Firefox

--- a/master.css
+++ b/master.css
@@ -51,6 +51,7 @@
 }
 
 .background-img {
+  position: absolute;
   z-index: -99;
   width: 100%;
   height: 100%;
